# revelo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  STATUS.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
crates/diff-harness/: Cargo.toml
crates/diff-harness/src/: main.rs
crates/mediainfo-cli/: Cargo.toml
crates/mediainfo-cli/src/: main.rs
crates/mediainfo-parsers-container/: Cargo.toml
crates/mediainfo-parsers-container/src/: aaf.rs  aiff.rs  amv.rs  avi.rs  bdmv.rs  cdxa.rs  dash_mpd.rs  dcp_am.rs  dcp_cpl.rs  dpg.rs  dv_dif.rs  dvdv.rs  dxw.rs  flv.rs  gxf.rs  hds_f4m.rs  hls.rs  ibi.rs  ism.rs  ivf.rs  lib.rs  lxf.rs  mi_xml.rs  mkv.rs  mp4.rs  mpeg_ps.rs  mpeg_ts.rs  mxf.rs  nsv.rs  nut.rs  ogg.rs  p2_clip.rs  pmp.rs  ptx.rs  rm.rs  sequence_info.rs  skm.rs  swf.rs  vbi.rs  wav.rs  (+3 more)
crates/revelio-cdylib/: Cargo.toml
crates/revelio-cdylib/src/: lib.rs
crates/revelio-cli/: Cargo.toml
crates/revelio-cli/src/: banner.txt  main.rs
crates/revelio-diff/: Cargo.toml
crates/revelio-diff/src/: main.rs
crates/revelio-dispatcher/: Cargo.toml
crates/revelio-dispatcher/src/: lib.rs
crates/revelio-parsers-archive/: Cargo.toml
crates/revelio-parsers-archive/src/: archives.rs  lib.rs
crates/revelio-parsers-container/: Cargo.toml
crates/revelio-parsers-container/src/: aaf.rs  aiff.rs  amv.rs  avi.rs  bdmv.rs  cdxa.rs  dash_mpd.rs  dcp_am.rs  dcp_cpl.rs  dcp_pkl.rs  dpg.rs  dv_dif.rs  dvdv.rs  dxw.rs  flv.rs  gxf.rs  hds_f4m.rs  hls.rs  ibi.rs  ism.rs  ivf.rs  lib.rs  lxf.rs  mi_xml.rs  mkv.rs  mp4.rs  mpeg_ps.rs  mpeg_ts.rs  mxf.rs  nsv.rs  nut.rs  ogg.rs  p2_clip.rs  pmp.rs  ptx.rs  rm.rs  scte35.rs  sequence_info.rs  skm.rs  swf.rs  (+5 more)
crates/revelio-parsers-image/: Cargo.toml
crates/revelio-parsers-image/src/: amiga_icon.rs  arriraw.rs  bmp.rs  bpg.rs  dds.rs  dpx.rs  exr.rs  gain_map.rs  gif.rs  heif.rs  ico.rs  jp2.rs  jpeg.rs  lib.rs  pcx.rs  png.rs  psd.rs  rle.rs  tga.rs  tiff.rs  webp.rs
crates/revelio-parsers-text/: Cargo.toml
crates/revelio-parsers-text/src/: arib_std_b24_b37.rs  cdp.rs  cmml.rs  dtvcc_transport.rs  dvb_subtitle.rs  eia608.rs  eia708.rs  kate.rs  lib.rs  n19.rs  other_text.rs  pac.rs  pdf.rs  pgs.rs  scc.rs  scte20.rs  sdp.rs  sub_rip.rs  teletext.rs  timed_text.rs  ttml.rs  webvtt.rs
crates/revelo/: Cargo.toml  README.md
crates/revelo-cdylib/: Cargo.toml  README.md
crates/revelo-cdylib/src/: lib.rs
crates/revelo-cli/: Cargo.toml  README.md
crates/revelo-cli/examples/: perf_probe.rs
crates/revelo-cli/src/: banner.txt  cli.rs  main.rs
crates/revelo-core/: Cargo.toml  README.md
crates/revelo-core/src/: byte_source.rs  channel_grouping.rs  computed_fields.rs  config.rs  data_helpers.rs  element.rs  events.rs  file_analyze.rs  lib.rs  mime.rs  multi_file.rs  prelude.rs  reader.rs  revelo_util_re_export.rs  stream.rs
crates/revelo-diff/: Cargo.toml  README.md
crates/revelo-diff/src/: main.rs
crates/revelo-dispatcher/: Cargo.toml  README.md
crates/revelo-dispatcher/src/: lib.rs
crates/revelo-exif-diff/: Cargo.toml
crates/revelo-exif-diff/src/: main.rs
crates/revelo-export/: Cargo.toml  README.md
crates/revelo-export/src/: csv.rs  ebu_core.rs  fims.rs  graph.rs  json.rs  lib.rs  mpeg7.rs  niso.rs  pbcore.rs  revtmd.rs  summary.rs  text.rs  xml.rs
crates/revelo-parsers-archive/: Cargo.toml  README.md
crates/revelo-parsers-archive/src/: archives.rs  lib.rs
crates/revelo-parsers-audio/: Cargo.toml  README.md
crates/revelo-parsers-audio/src/: aac.rs  aac_adts.rs  ac3.rs  ac4.rs  adm.rs  adpcm.rs  als.rs  amr.rs  ape.rs  aptx100.rs  au.rs  caf.rs  celt.rs  channel_grouping.rs  channel_splitting.rs  dat.rs  dolby_audio_metadata.rs  dolby_e.rs  dsdiff.rs  dsf.rs  dts.rs  dts_uhd.rs  extended_module.rs  flac.rs  iab.rs  iamf.rs  impulse_tracker.rs  la.rs  lib.rs  mga.rs  midi.rs  module.rs  mp3.rs  mpc.rs  mpc_sv8.rs  mpegh3da.rs  open_mg.rs  opus.rs  pcm.rs  pcm_m2ts.rs  (+16 more)
crates/revelo-parsers-container/: Cargo.toml  README.md
crates/revelo-parsers-container/src/: aaf.rs  aiff.rs  amv.rs  avi.rs  bdmv.rs  cdxa.rs  dash_mpd.rs  dcp_am.rs  dcp_cpl.rs  dcp_pkl.rs  dpg.rs  dv_dif.rs  dvdv.rs  dxw.rs  flv.rs  gxf.rs  hds_f4m.rs  hls.rs  ibi.rs  ism.rs  ivf.rs  lib.rs  lxf.rs  mi_xml.rs  mkv.rs  mp4.rs  mpeg_ps.rs  mpeg_ts.rs  mxf.rs  nsv.rs  nut.rs  ogg.rs  p2_clip.rs  pmp.rs  ptx.rs  rm.rs  scte35.rs  sequence_info.rs  skm.rs  swf.rs  (+5 more)
crates/revelo-parsers-image/: Cargo.toml  README.md
crates/revelo-parsers-image/src/: amiga_icon.rs  arriraw.rs  bmp.rs  bpg.rs  cr2.rs  dds.rs  dpx.rs  exr.rs  gain_map.rs  gif.rs  heif.rs  ico.rs  jp2.rs  jpeg.rs  lib.rs  pcx.rs  png.rs  psd.rs  raf.rs  rle.rs  tga.rs  tiff.rs  webp.rs
crates/revelo-parsers-tag/: Cargo.toml  README.md
crates/revelo-parsers-tag/src/: lib.rs  tags.rs
crates/revelo-parsers-text/: Cargo.toml  README.md
crates/revelo-parsers-text/src/: arib_std_b24_b37.rs  cdp.rs  cmml.rs  dtvcc_transport.rs  dvb_subtitle.rs  eia608.rs  eia708.rs  kate.rs  lib.rs  n19.rs  other_text.rs  pac.rs  pdf.rs  pgs.rs  scc.rs  scte20.rs  sdp.rs  sub_rip.rs  teletext.rs  timed_text.rs  ttml.rs  webvtt.rs
crates/revelo-parsers-video/: Cargo.toml  README.md
crates/revelo-parsers-video/src/: afd_bar_data.rs  aic.rs  apv.rs  av1.rs  avc.rs  avs.rs  avs3.rs  canopus.rs  cineform.rs  dirac.rs  dolby_vision.rs  dolby_vision_rpu.rs  ffv1.rs  flic.rs  fraps.rs  h263.rs  hdr_vivid.rs  hevc.rs  huffyuv.rs  lagarith.rs  lib.rs  mpeg2.rs  mpeg4v.rs  prores.rs  theora.rs  vc1.rs  vc3.rs  vp8.rs  vp9.rs  vvc.rs  y4m.rs
crates/revelo-reader/: Cargo.toml  README.md
crates/revelo-reader/src/: lib.rs
crates/revelo-util/: Cargo.toml  README.md
crates/revelo-util/src/: bitstream.rs  lib.rs  ztring.rs
crates/revelo-wasm/: Cargo.toml
crates/revelo-wasm/src/: lib.rs
crates/revelo/benches/: parse_benchmark.rs
crates/revelo/src/: lib.rs
docs/: CONTRIBUTING.md  HACKING.md  RELEASING.md  article.md  field_coverage.md  findings.md  formats.md  homebrew.md  output_fidelity_gaps.md
scripts/: bootstrap-homebrew-tap.sh  release.sh
(+242 files in other folders)
