[workspace]
resolver = "3"
members = [
    "crates/revelo-diff",
    "crates/revelo-cli",
    "crates/revelo-core",
    "crates/revelo-export",
    "crates/revelo-parsers-archive",
    "crates/revelo-reader",
    "crates/revelo-dispatcher",
    "crates/revelo-parsers-audio",
    "crates/revelo-parsers-container",
    "crates/revelo-parsers-image",
    "crates/revelo-parsers-tag",
    "crates/revelo-parsers-text",
    "crates/revelo-parsers-video",
    "crates/revelo-util",
    "crates/revelo-cdylib",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/vbasky/revelo"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
invalid_html_tags = "allow"
broken_intra_doc_links = "allow"

[workspace.lints.clippy]
unwrap_used = "warn"
doc_markdown = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
rayon = "1"
