[package]
name = "diff-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "diff-harness"
path = "src/main.rs"

[dependencies]
mediainfo-core = { path = "../mediainfo-core" }
mediainfo-export = { path = "../mediainfo-export" }
mediainfo-parsers-audio = { path = "../mediainfo-parsers-audio" }
mediainfo-parsers-container = { path = "../mediainfo-parsers-container" }
mediainfo-parsers-image = { path = "../mediainfo-parsers-image" }
