[package]
name = "mediainfo-parsers-container"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mediainfo_parsers_container"
path = "src/lib.rs"

[dependencies]
mediainfo-core = { path = "../mediainfo-core" }
zenlib = { path = "../zenlib" }
