[package]
name = "revelio-cdylib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shim exposing MediaInfo_* entry points"

[lib]
name = "revelio_cdylib"
crate-type = ["cdylib"]

[dependencies]
revelio-core = { path = "../revelio-core" }
revelio-export = { path = "../revelio-export" }
revelio-parsers-audio = { path = "../revelio-parsers-audio" }
revelio-parsers-container = { path = "../revelio-parsers-container" }
revelio-parsers-image = { path = "../revelio-parsers-image" }
revelio-parsers-text = { path = "../revelio-parsers-text" }
revelio-parsers-video = { path = "../revelio-parsers-video" }
zenlib = { path = "../zenlib" }
