[package]
name = "revelio-cdylib"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shim exposing MediaInfo_* entry points"

[lib]
name = "revelio_cdylib"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
revelio-dispatcher = { path = "../revelio-dispatcher" }
revelio-core = { path = "../revelio-core" }
revelio-export = { path = "../revelio-export" }
zenlib = { path = "../zenlib" }
