[package]
name = "revelio-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "revelio CLI"

[[bin]]
name = "revelio"
path = "src/main.rs"

[dependencies]
revelio-core = { path = "../revelio-core" }
revelio-export = { path = "../revelio-export" }
revelio-parsers-archive = { path = "../revelio-parsers-archive" }
revelio-parsers-audio = { path = "../revelio-parsers-audio" }
revelio-parsers-container = { path = "../revelio-parsers-container" }
revelio-parsers-image = { path = "../revelio-parsers-image" }
revelio-parsers-text = { path = "../revelio-parsers-text" }
revelio-parsers-video = { path = "../revelio-parsers-video" }
zenlib = { path = "../zenlib" }
