[package]
name = "revelio-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "revelio CLI"

[[bin]]
name = "revelio"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
revelio-dispatcher = { path = "../revelio-dispatcher" }
revelio-core = { path = "../revelio-core" }
revelio-export = { path = "../revelio-export" }
zenlib = { path = "../zenlib" }
