[package]
name = "revelio-diff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Differential testing against mediainfo oracle"

[[bin]]
name = "revelio-diff"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
revelio-export = { path = "../revelio-export" }
revelio-parsers-audio = { path = "../revelio-parsers-audio" }
revelio-parsers-container = { path = "../revelio-parsers-container" }
revelio-parsers-image = { path = "../revelio-parsers-image" }
revelio-parsers-text = { path = "../revelio-parsers-text" }
revelio-parsers-video = { path = "../revelio-parsers-video" }
