[package]
name = "revelio-diff"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Differential testing against mediainfo oracle"

[[bin]]
name = "revelio-diff"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
revelio-dispatcher = { path = "../revelio-dispatcher" }
revelio-export = { path = "../revelio-export" }
