[package]
name = "revelio-dispatcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rayon.workspace = true
revelio-core = { path = "../revelio-core" }
revelio-parsers-archive = { path = "../revelio-parsers-archive" }
revelio-parsers-audio = { path = "../revelio-parsers-audio" }
revelio-parsers-container = { path = "../revelio-parsers-container" }
revelio-parsers-image = { path = "../revelio-parsers-image" }
revelio-parsers-tag = { path = "../revelio-parsers-tag" }
revelio-parsers-text = { path = "../revelio-parsers-text" }
revelio-parsers-video = { path = "../revelio-parsers-video" }
