[package]
name = "revelio-parsers-archive"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelio_parsers_archive"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
zenlib = { path = "../zenlib" }
