[package]
name = "revelio-parsers-container"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelio_parsers_container"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
revelio-parsers-video = { path = "../revelio-parsers-video" }
zenlib = { path = "../zenlib" }
