[package]
name = "revelio-parsers-image"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelio_parsers_image"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
zenlib = { path = "../zenlib" }
