[package]
name = "revelio-parsers-text"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelio_parsers_text"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelio-core = { path = "../revelio-core" }
zenlib = { path = "../zenlib" }
