[package]
name = "revelo-cdylib"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shim exposing MediaInfo_* entry points"
readme = "README.md"

[lib]
name = "revelo_cdylib"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
revelo-dispatcher = { path = "../revelo-dispatcher", version = "0.2.1" }
revelo-core = { path = "../revelo-core", version = "0.2.1" }
revelo-export = { path = "../revelo-export", version = "0.2.1" }
revelo-util = { path = "../revelo-util", version = "0.2.1" }
