[package]
name = "revelo-cdylib"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shim exposing MediaInfo_* entry points"
keywords = ["mediainfo", "ffi", "c-api", "media", "metadata"]
categories = ["multimedia", "external-ffi-bindings", "api-bindings"]
readme = "README.md"

[lib]
name = "revelo_cdylib"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
revelo-dispatcher = { path = "../revelo-dispatcher", version = "0.3.0" }
revelo-core = { path = "../revelo-core", version = "0.3.0" }
revelo-export = { path = "../revelo-export", version = "0.3.0" }
revelo-util = { path = "../revelo-util", version = "0.3.0" }
