[package]
name = "revelo-cli"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "revelo CLI"
keywords = ["mediainfo", "metadata", "media", "parser", "ffprobe"]
categories = ["command-line-utilities", "multimedia", "parser-implementations"]
readme = "README.md"

[[bin]]
name = "revelo"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
revelo-dispatcher = { path = "../revelo-dispatcher", version = "0.2.3" }
revelo-core = { path = "../revelo-core", version = "0.2.3" }
revelo-export = { path = "../revelo-export", version = "0.2.3" }
revelo-util = { path = "../revelo-util", version = "0.2.3" }
revelo-parsers-tag = { path = "../revelo-parsers-tag", version = "0.2.3" }
