[package]
name = "revelo-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for revelo: the FileAnalyze byte reader, stream collection, element tree, and ergonomic Reader API."

[lib]
name = "revelo_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-util = { path = "../revelo-util", version = "0.2.0" }
