[package]
name = "revelo-core"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for revelo: the FileAnalyze byte reader, stream collection, element tree, and ergonomic Reader API."
keywords = ["media", "metadata", "parser", "mediainfo", "reader"]
categories = ["multimedia", "parsing", "parser-implementations"]
readme = "README.md"

[lib]
name = "revelo_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-util = { path = "../revelo-util", version = "0.4.6" }
