[package]
name = "revelo-dispatcher"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rayon.workspace = true
revelo-core = { path = "../revelo-core" }
revelo-parsers-archive = { path = "../revelo-parsers-archive" }
revelo-parsers-audio = { path = "../revelo-parsers-audio" }
revelo-parsers-container = { path = "../revelo-parsers-container" }
revelo-parsers-image = { path = "../revelo-parsers-image" }
revelo-parsers-tag = { path = "../revelo-parsers-tag" }
revelo-parsers-text = { path = "../revelo-parsers-text" }
revelo-parsers-video = { path = "../revelo-parsers-video" }
