[package]
name = "revelo-dispatcher"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel format-detection dispatch table for revelo's media parsers."
keywords = ["media", "format", "detection", "parser", "dispatch"]
categories = ["multimedia", "parsing", "concurrency"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
rayon.workspace = true
revelo-core = { path = "../revelo-core", version = "0.4.1" }
revelo-parsers-archive = { path = "../revelo-parsers-archive", version = "0.4.1" }
revelo-parsers-audio = { path = "../revelo-parsers-audio", version = "0.4.1" }
revelo-parsers-container = { path = "../revelo-parsers-container", version = "0.4.1" }
revelo-parsers-image = { path = "../revelo-parsers-image", version = "0.4.1" }
revelo-parsers-tag = { path = "../revelo-parsers-tag", version = "0.4.1" }
revelo-parsers-text = { path = "../revelo-parsers-text", version = "0.4.1" }
revelo-parsers-video = { path = "../revelo-parsers-video", version = "0.4.1" }
