[package]
name = "revelo-exif-diff"
version = "0.4.4"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
# This validation tool links the GPL `revelo-exiftool-tables` crate (via
# the exiftool-tables feature) so it can measure parity against the data
# it is meant to validate. It is a dev tool, never shipped as the product.
license = "GPL-1.0-or-later OR Artistic-1.0-Perl"
description = "Differential testing of revelo's EXIF/maker-note extraction against the exiftool oracle"

[[bin]]
name = "revelo-exif-diff"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.4.4" }
revelo-dispatcher = { path = "../revelo-dispatcher", version = "0.4.4" }
# Force the ExifTool tables on for this validator so we compare revelo's
# best-effort output against exiftool itself.
revelo-parsers-tag = { path = "../revelo-parsers-tag", version = "0.4.4", features = [
    "exiftool-tables",
] }
