[package]
name = "revelo-export"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Output formatters for revelo: XML, JSON, Text, EBUCore, MPEG-7, PBCore, NISO, FIMS, Graph, RevTMD."
readme = "README.md"

[lib]
name = "revelo_export"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.1" }
revelo-util = { path = "../revelo-util", version = "0.2.1" }
