[package]
name = "revelo-parsers-archive"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Archive-format parsers for revelo (ZIP, 7z, RAR, tar, gzip, ...)."

[lib]
name = "revelo_parsers_archive"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.0" }
zenlib = { path = "../zenlib", version = "0.2.0" }
