[package]
name = "revelo-parsers-audio"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelo_parsers_audio"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core" }
zenlib = { path = "../zenlib" }
