[package]
name = "revelo-parsers-audio"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio-codec parsers for revelo (AAC, AC-3, DTS, FLAC, Opus, IAMF, ...)."
keywords = ["audio", "aac", "flac", "opus", "parser"]
categories = ["parser-implementations", "multimedia::audio", "parsing"]
readme = "README.md"

[lib]
name = "revelo_parsers_audio"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.4.1" }
revelo-util = { path = "../revelo-util", version = "0.4.1" }
