[package]
name = "revelo-parsers-container"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "revelo_parsers_container"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core" }
revelo-parsers-video = { path = "../revelo-parsers-video" }
zenlib = { path = "../zenlib" }
