[package]
name = "revelo-parsers-container"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Container-format parsers for revelo (MP4, MKV, MPEG-TS, AVI, WAV, ...)."
readme = "README.md"

[lib]
name = "revelo_parsers_container"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.0" }
revelo-parsers-video = { path = "../revelo-parsers-video", version = "0.2.0" }
revelo-util = { path = "../revelo-util", version = "0.2.0" }
