[package]
name = "revelo-parsers-image"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Image-format parsers for revelo (JPEG, PNG, TIFF, WebP, HEIF, ...)."
readme = "README.md"

[lib]
name = "revelo_parsers_image"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.1" }
revelo-util = { path = "../revelo-util", version = "0.2.1" }
