[package]
name = "revelo-parsers-tag"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tag and metadata parsers for revelo (ID3, APE, Vorbis comments, XMP, ...)."

[lib]
name = "revelo_parsers_tag"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.0" }
revelo-util = { path = "../revelo-util", version = "0.2.0" }
