[package]
name = "revelo-parsers-tag"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tag and metadata parsers for revelo (ID3, APE, Vorbis comments, XMP, ...)."
keywords = ["id3", "metadata", "tags", "xmp", "parser"]
categories = ["parser-implementations", "parsing", "multimedia"]
readme = "README.md"

[lib]
name = "revelo_parsers_tag"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.3.0" }
revelo-util = { path = "../revelo-util", version = "0.3.0" }
flate2 = "1"
