[package]
name = "revelo-parsers-video"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Video-codec parsers for revelo (AVC, HEVC, AV1, APV, VP9, ...)."
keywords = ["video", "hevc", "av1", "avc", "parser"]
categories = ["parser-implementations", "multimedia::video", "parsing"]
readme = "README.md"

[lib]
name = "revelo_parsers_video"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.3" }
revelo-util = { path = "../revelo-util", version = "0.2.3" }
