[package]
name = "revelo-reader"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Input/reader layer for revelo (file and directory sources)."
readme = "README.md"
[lib]
name = "revelo_reader"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
revelo-core = { path = "../revelo-core", version = "0.2.1" }
