[package]
name = "revelo-util"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level string, number, and bitstream primitives (Ztring, radix conversion) underpinning revelo."
readme = "README.md"

[lib]
name = "revelo_util"
path = "src/lib.rs"

[lints]
workspace = true
