[package]
name = "revelo-wasm"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for revelo — parse media metadata in the browser"
keywords = ["wasm", "mediainfo", "media", "metadata", "browser"]
categories = ["wasm", "multimedia", "parsing"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
revelo = { path = "../revelo", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]
